--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.1.7",
     "add": "^2.0.6",
     "echarts": "^5.1.1",
+    "koa": "^2.13.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -27,6 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "server:start": "node ./server/index.js",
     "cypress:open": "export APPLITOOLS_API_KEY=VJoLFaS0Of7G9QjhS0nWMaYZWvXb1Q1AhC3K3WHGW108E110 && cypress open",
     "cypress:run-percy": "export PERCY_TOKEN=bc91bd24cb6e3138bcab7c377a13cccc24b34ab38fe0694ae3a4e5c421de3083 && percy exec -- cypress run --spec \"cypress/integration/charts-base/percy-snapshots.js\" --browser chrome"
   },
@@ -54,7 +56,7 @@
     "@cypress/webpack-dev-server": "^1.1.6",
     "@percy/cli": "^1.0.0-beta.48",
     "@percy/cypress": "^3.1.0",
-    "cypress": "4.5.0",
+    "cypress": "^7.2.0",
     "cypress-plugin-snapshots": "^1.4.4"
   }
 }
